--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "sandbox",
   "version": "1.0.0",
   "description": "Test project",
-  "main": "dist/index.js",
+  "main": "dist/tertiary.js",
   "scripts": {
+	"start": "tsc && node .",
 	"lint": "eslint --ext ts,tsx .",
 	"test": "echo \"Error: no test specified\" && exit 1",
 	"prepare": "husky install"
