--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 name = "main"
 path = "src/rust/main.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[test]]
+name = "integration"
+path = "src/rust/tests/main.rs"
 
-[dependencies]
+[dev-dependencies]
+test-generator = "0.3.0"
